[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "hellorust"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
__ditto_session_sync = []

[dependencies]
anyhow = "1.0.71"
arrayvec= "0.7.2"
base64 = "0.13.1" 
# bev64 = { path = "./utils/bev64" }
blake3 = { version = "1.3", features = ["traits-preview"] }
bytes = "1.1"
cfg_eval  = "0.1.2"
digest = "0.10"
# ditto-utils = { path = "./utils/utils", default-features = false }
macro_rules_attribute = "0.1.3"
num-derive = "0.4.1"
num-traits = "0.2"
paste = "1.0.12" 
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.104" 
sha2 = "0.10"
snap = "1.0.5"
# stable-hash = { path = "./utils/stable-hash" }
tap = "1.0.1"  
thiserror = "1.0.48"
tokio = { version = "1.34.0", features = ["rt", "io-util", "macros"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }

[dev-dependencies]
assert_matches = "1.5.0"
# ditto-test-support = { path = "./utils/test-support" }
pretty_assertions = "1.4.0"
tracing = "0.1.37"